Fix overflow issue in code blocks. (#13)
* Update Disqus shortname

* Fix code block overflow

* Word wrapping on backtick wrapping

--- a/assets/stylesheets/_alerts.less
+++ b/assets/stylesheets/_alerts.less
@@ -86,7 +86,14 @@
 	background-color: lighten(@border-light, 7%);
 	&:before { content: "Output"; }
 }
-
+pre {
+    overflow-x: auto;
+}
+pre code {
+	word-wrap: normal;
+    overflow-wrap: normal;
+    white-space: pre;
+}
 // generate inline blocks
 
 .make-inline-block(@color) {
