--- a/assets/stylesheets/_type.less
+++ b/assets/stylesheets/_type.less
@@ -127,6 +127,7 @@ pre {
 
 code {
 	.border-radius-default;
+    word-wrap: break-word;
 }
 
 .amp {
